# Splits

./: Cargo.toml
splits-cli/: Cargo.toml
splits-cli/src/: app.rs  file.rs  main.rs  style.rs  ui.rs
splits-core/: Cargo.toml
splits-core/src/: lib.rs  run.rs  segment.rs  time.rs  timer.rs
splits-serde/: Cargo.toml
splits-serde/src/: lib.rs
