[package]
name = "splits-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
clap = { version = "4.2.5", features = ["derive"] }
crossterm = "0.26.1"
ratatui = "0.20.1"
serde_yaml = "0.9.21"
splits-core = { version = "0.1.0", path = "../splits-core" }
splits-serde = { version = "0.1.0", path = "../splits-serde" }
